src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_search_bar_active.snap
---
source: src/frontend/tui/conversation_area.rs
assertion_line: 2043
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│You:                                                      │"
"│  hello world                                             │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"/hello [1/1]                                                "
