src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_search_bar_input.snap
---
source: src/frontend/tui/conversation_area.rs
assertion_line: 2011
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│You:                                                      │"
"│  test content                                            │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"/search term                                                "
