src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_search_highlights.snap
---
source: src/frontend/tui/conversation_area.rs
assertion_line: 1991
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│You:                                                      │"
"│  hello world                                             │"
"│                                                          │"
"│Assistant:                                                │"
"│  Hello there                                             │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"/hello [1/2]                                                "
