src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_tool_entry_not_rendered_as_markdown.snap
---
source: src/frontend/tui/conversation_area.rs
assertion_line: 1235
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│[Tool]:                                                   │"
"│  bash                                                    │"
"│  {"command": "ls"}                                       │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
