src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_user_markdown_italic.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"You:                                                        "
"  This is italic text                                       "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
