src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_with_thinking_preview.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"[Thinking]:                                                 "
"  analyzing the request                                     "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
