src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__windowed_render_many_entries.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│  message 47                                              │"
"│                                                          │"
"│You:                                                      │"
"│  message 48                                              │"
"│                                                          │"
"│You:                                                      │"
"│  message 49                                              │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
