src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__windowed_render_with_scroll_offset.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│You:                                                      │"
"│  message 10                                              │"
"│                                                          │"
"│You:                                                      │"
"│  message 11                                              │"
"│                                                          │"
"│You:                                                      │"
"│  message 12                                              │"
"│                                                          │"
"│You:                                                      │"
"└──────────────────────────────────────────────────────────┘"
